--- a/src/style/style.css
+++ b/src/style/style.css
@@ -170,9 +170,9 @@ body {
 
 /** START WRITING YOUR CODE BELOW  **/
 
-.full-section {
+/**.full-section {
   min-height: 100vh;
-}
+}**/
 
 .canvas {
   z-index: -1;
@@ -180,7 +180,7 @@ body {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   background-image: url("../img/filler.png");
 }
 
