--- a/src/style/style.css
+++ b/src/style/style.css
@@ -6,6 +6,7 @@
 :root {
   --white: #fff;
   --gray: #616161;
+  --grey--dark: #444649;
   --primary: #00c6ff;
   --primary-dark: #02b9ec;
   --primary-darker: #02b0e0;
@@ -147,6 +148,12 @@
   }
 }
 
+@keyframes rotate90Deg {
+  100% {
+    transform: rotate(90deg);
+  }
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -170,9 +177,10 @@ body {
 
 /** START WRITING YOUR CODE BELOW  **/
 
-/**.full-section {
+.full-section {
   min-height: 100vh;
-}**/
+  z-index: 1;
+}
 
 .canvas {
   z-index: -1;
@@ -180,12 +188,24 @@ body {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   background-image: url("../img/filler.png");
 }
 
 #foreground {
-  z-index: 1;
+  z-index: 2;
+  padding-top: 40vh;
+}
+
+.full-section h1,
+.full-section h2 {
+  margin: 0px;
+  font-size: 32pt;
+  line-height: 45px;
+}
+
+.bold {
+  font-weight: 900;
 }
 
 .primary-text-color {
@@ -193,9 +213,69 @@ body {
 }
 
 .big-button {
-  font-size: 13pt;
+  font-size: 22px;
+  font-family: "Raleway", sans-serif;
+
   border: 2px solid var(--white);
   background: none;
   color: var(--white);
-  padding: 20px 40px;
+
+  margin-top: 20px;
+  padding: 12px 20px;
+}
+
+.big-button:hover {
+  background: var(--primary-darker);
+  border: 2px solid var(--primary-darker);
+}
+
+.big-button:hover i {
+  animation: rotate90Deg 0.2s forwards;
+}
+
+.big-button i {
+  margin-left: 7px;
+  position: relative;
+  top: 2px;
+}
+
+/** ABOUT SECTION**/
+
+#about {
+  background: var(--white);
+  color: var(--gray);
+}
+
+#about h2 {
+  font-weight: 900;
+  font-family: "raleway-bold";
+  text-transform: uppercase;
+  color: var(--grey--dark);
+}
+
+#about hr {
+  width: 70px;
+  border-bottom: 3px solid var(--grey--dark);
+  margin-top: 8px;
+}
+
+.hexagon-container .hexagon {
+  font-size: 54px;
+  width: 90px;
+  height: 90px;
+  padding-top: 4px;
+  border-radius: 100%;
+  margin: 0 auto;
+  background: var(--primary-darker);
+  color: var(--white);
+}
+
+.hexagon-container h5 {
+  font-size: 24px;
+  font-family: "raleway-bold";
+}
+
+.hexagon-container p {
+  font-size: 16px;
+  font-weight: 500;
 }
