--- a/src/style/style.css
+++ b/src/style/style.css
@@ -154,10 +154,14 @@
   }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+html {
+  scroll-behavior: smooth;
 }
+
+a {
+    color: inherit;
+    text-decoration: none;
+  }
 
 body {
   background-color: var(--primary-darkest);
@@ -310,7 +314,7 @@ body {
   margin: 2px 7px 0px 0px;
 }
 
-#bars-contain er:not(.animated) .bar .fill {
+#bars-container:not(.animated) .bar .fill {
   width: 0px;
 }
 
@@ -370,4 +374,10 @@ body {
 
 #about-me p {
   font-size: 16px;
+}
+
+.portfolio-pic {
+  border-radius: 50%;
+  width: 355px;
+  box-shadow: 10px 10px 20px #a0a0a0;
 }
