--- a/src/style/style.css
+++ b/src/style/style.css
@@ -193,7 +193,7 @@ body {
   left: 0;
   width: 100vw;
   height: 100%;
-  background-image: url("/src/img/filler.png");
+  background-image: url("img/filler.png");
 }
 
 #foreground {
