--- a/src/style/style.css
+++ b/src/style/style.css
@@ -154,6 +154,23 @@
   }
 }
 
+@keyframes animate
+{
+  0%
+  {
+      width: 0%;
+      
+  }
+
+  100%
+  {
+      width: 100%;
+
+  }
+}
+
+  
+
 html {
   scroll-behavior: smooth;
 }
@@ -193,7 +210,7 @@ body {
   left: 0;
   width: 100vw;
   height: 100%;
-  background-image: url("img/filler.png");
+  background-image: url(/src/img/filler.png);
 }
 
 #foreground {
@@ -215,6 +232,34 @@ body {
 .primary-text-color {
   color: var(--primary);
 }
+
+#text-animation {
+  position: relative;
+  font-family: 'Poppins', sans-serif;
+  margin-top: 10px;
+  color: transparent;
+  font-size: 6vh;
+  -webkit-text-stroke: 0.1vw transparent;
+  text-transform: uppercase;
+  justify-self: center;
+  align-items: center;
+}
+
+#text-animation::before {
+  content: attr(data-text);
+  position: absolute;
+  color: #00c6ff;
+  width: 0%;
+  height: 58%;
+  overflow: hidden;
+  -webkit-text-stroke: 1px var(--primary);
+
+  overflow: hidden;
+  animation: animate 2.5s linear forwards;
+  animation-delay: 0.7s;
+}
+
+
 
 .big-button {
   font-size: 22px;
@@ -381,3 +426,4 @@ body {
   width: 355px;
   box-shadow: 10px 10px 20px #a0a0a0;
 }
+
